trivial Netbeans suggestions, don't use new Double() since it is deprecated.